--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-promise": "^5.1.0",
     "ethereum-waffle": "^3.0.0",
     "ethers": "^5.0.0",
+    "firebase": "^9.8.2",
     "hardhat": "^2.8.4",
     "hardhat-gas-reporter": "^1.0.4",
     "prettier": "^2.3.2",
