--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "test": "npx hardhat test",
+    "build": "npx hardhat compile",
     "solhint": "./node_modules/.bin/solhint -f table 'contracts/**/*.sol'",
     "prettier:solidity": "./node_modules/.bin/prettier --write 'contracts/**/*.sol'",
     "prettier": "./node_modules/.bin/prettier --write 'test/**/*.ts' 'scripts/**/*.ts' *.ts",
@@ -37,6 +38,8 @@
     "firebase": "^9.8.2",
     "hardhat": "^2.8.4",
     "hardhat-gas-reporter": "^1.0.4",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.3.2",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
     "solhint": "^3.3.6",
@@ -48,5 +51,9 @@
   "dependencies": {
     "@openzeppelin/contracts": "3.4.1-solc-0.7-2",
     "@openzeppelin/contracts-upgradeable": "3.4.1-solc-0.7-2"
+  },
+  "lint-staged": {
+    "*.{js,ts}": "npx eslint --cache --fix",
+    "*.sol": "prettier --ignore-unknown --write"
   }
 }
