--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "ethereum-waffle": "^3.0.0",
     "ethers": "^5.0.0",
     "firebase": "^9.8.2",
-    "hardhat": "^2.8.4",
+    "hardhat": "2.8.4",
     "hardhat-gas-reporter": "^1.0.4",
     "prettier": "^2.3.2",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
