--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "ethereum-waffle": "^3.0.0",
     "ethers": "^5.0.0",
     "firebase": "^9.8.2",
-    "hardhat": "2.8.4",
+    "hardhat": "^2.10.1",
     "hardhat-gas-reporter": "^1.0.4",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
