--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@nomiclabs/hardhat-vyper": "^3.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
-    "@typechain/ethers-v5": "7.0.1",
-    "@typechain/hardhat": "^2.3.0",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.3",
     "@types/chai": "^4.2.21",
     "@types/mocha": "^9.0.0",
     "@types/node": "^12.0.0",
@@ -34,7 +34,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
     "ethereum-waffle": "^3.0.0",
-    "ethers": "5.1.3",
+    "ethers": "^5.7.2",
     "firebase": "^9.8.2",
     "hardhat": "^2.10.1",
     "hardhat-gas-reporter": "^1.0.4",
@@ -45,7 +45,7 @@
     "solhint": "^3.3.6",
     "solidity-coverage": "^0.7.16",
     "ts-node": "^10.1.0",
-    "typechain": "5.1.2",
+    "typechain": "^8.1.0",
     "typescript": "^4.5.2"
   },
   "dependencies": {
