--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.3",
+    "@types/asciichart": "^1.5.6",
     "@types/chai": "^4.2.21",
     "@types/mocha": "^9.0.0",
     "@types/node": "^12.0.0",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
+    "asciichart": "^1.5.25",
     "axios": "^1.2.3",
     "chai": "^4.2.0",
     "commander": "^9.3.0",
