--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "solhint": "^3.3.6",
     "solidity-coverage": "^0.7.16",
     "ts-node": "^10.1.0",
+    "tty-table": "^4.1.6",
     "typechain": "^8.1.0",
     "typescript": "^4.5.2"
   },
