add shortcut cmd for scripts

--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "npx hardhat test",
     "build": "npx hardhat compile",
+    "votium:vote": "yarn ts-node scripts/votium/optimal_vote.ts",
+    "votium:proof": "yarn ts-node scripts/votium/get_proof.ts --round",
+    "votium:harvest": "env HARDHAT_NETWORK=mainnet yarn ts-node scripts/votium/harvest.ts --round",
+    "cvxcrv:weight": "env HARDHAT_NETWORK=mainnet yarn ts-node scripts/cvxcrv_optimal_apr.ts --holder",
     "solhint": "./node_modules/.bin/solhint -f table 'contracts/**/*.sol'",
     "prettier:solidity": "./node_modules/.bin/prettier --write 'contracts/**/*.sol'",
     "prettier": "./node_modules/.bin/prettier --write 'test/**/*.ts' 'scripts/**/*.ts' *.ts",
