--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@nomiclabs/hardhat-vyper": "^3.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "@snapshot-labs/snapshot.js": "^0.4.71",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.3",
     "@types/asciichart": "^1.5.6",
