--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "ts-node": "^10.1.0",
     "tty-table": "^4.1.6",
     "typechain": "^8.1.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "undici": "^5.22.1"
   },
   "dependencies": {
     "@openzeppelin/contracts": "3.4.1-solc-0.7-2",
