--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@typechain/hardhat": "^6.1.3",
     "@types/asciichart": "^1.5.6",
     "@types/chai": "^4.2.21",
+    "@types/edit-json-file": "^1.7.0",
     "@types/mocha": "^9.0.0",
     "@types/node": "^12.0.0",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
@@ -35,6 +36,7 @@
     "chai": "^4.2.0",
     "commander": "^9.3.0",
     "dotenv": "^10.0.0",
+    "edit-json-file": "^1.7.0",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
