--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,12 @@
 {
   "compilerOptions": {
+    "paths": {
+      "@contracts/*": ["scripts/contracts/*"],
+      "@stakedao/*": ["scripts/stakedao/*"],
+      "@typechain/*": ["./typechain/*"],
+      "@utils/*": ["scripts/utils/*"],
+      "@votium/*": ["scripts/votium/*"]
+    },
     "target": "es2018",
     "module": "commonjs",
     "strict": true,
@@ -7,6 +14,6 @@
     "outDir": "dist",
     "declaration": true
   },
-  "include": ["./scripts", "./test", "./typechain"],
+  "include": ["scripts", "./test", "./typechain"],
   "files": ["./hardhat.config.ts"]
 }
