--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "3.4.1-solc-0.7-2",
-    "@openzeppelin/contracts-upgradeable": "3.4.1-solc-0.7-2"
+    "@openzeppelin/contracts-upgradeable": "3.4.1-solc-0.7-2",
+    "@openzeppelin/contracts-upgradeable-v4": "npm:@openzeppelin/contracts-upgradeable@4.9.3",
+    "@openzeppelin/contracts-v4": "npm:@openzeppelin/contracts@4.9.3"
   },
   "lint-staged": {
     "*.{js,ts}": "npx eslint --cache --fix",
