--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
     "paths": {
-      "@contracts/*": ["scripts/contracts/*"],
-      "@stakedao/*": ["scripts/stakedao/*"],
+      "@contracts/*": ["./scripts/contracts/*"],
+      "@stakedao/*": ["./scripts/stakedao/*"],
       "@typechain/*": ["./typechain/*"],
-      "@utils/*": ["scripts/utils/*"],
-      "@votium/*": ["scripts/votium/*"]
+      "@utils/*": ["./scripts/utils/*"],
+      "@votium/*": ["./scripts/votium/*"]
     },
     "target": "ES2020",
     "module": "commonjs",
