--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "npx hardhat test",
     "build": "npx hardhat compile",
-    "votium:vote": "yarn ts-node scripts/votium/optimal_vote.ts",
+    "votium:vote": "yarn ts-node scripts/votium/hermez_vote.ts",
+    "votium:snapshot_vote": "yarn ts-node scripts/votium/snapshot_vote.ts",
     "votium:proof": "yarn ts-node scripts/votium/get_proof.ts --round",
     "votium:harvest": "env HARDHAT_NETWORK=mainnet yarn ts-node scripts/votium/harvest.ts --round",
     "sdcrv:harvest": "env HARDHAT_NETWORK=mainnet yarn ts-node scripts/stakedao/harvest.ts --round",
