--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,15 @@
 {
+  "ts-node": {
+    // Do not forget to `npm i -D tsconfig-paths`
+    "require": ["tsconfig-paths/register"]
+  },
   "compilerOptions": {
+    "moduleResolution": "node",
+    "baseUrl": ".",
     "paths": {
-      "@contracts/*": ["scripts/contracts/*"],
-      "@stakedao/*": ["scripts/stakedao/*"],
-      "@typechain/*": ["./typechain/*"],
-      "@utils/*": ["scripts/utils/*"],
-      "@votium/*": ["scripts/votium/*"]
+      "@/contracts/*": ["scripts/contracts/*"],
+      "@/types/*": ["scripts/@types/*"],
+      "@/utils/*": ["scripts/utils/*"]
     },
     "target": "ES2020",
     "module": "commonjs",
