--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "paths": {
       "@/contracts/*": ["scripts/contracts/*"],
       "@/types/*": ["scripts/@types/*"],
-      "@/utils/*": ["scripts/utils/*"]
+      "@/utils/*": ["scripts/utils/*"],
+      "@/test/*": ["test/*"]
     },
     "target": "ES2020",
     "module": "commonjs",
