--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "npx hardhat test",
     "build": "npx hardhat compile --no-typechain && npx hardhat typechain",
+    "vlcvx:crv": "yarn ts-node scripts/votium/vote.ts snapshot --protocol CRV",
+    "vlcvx:prisma": "yarn ts-node scripts/votium/vote.ts snapshot --protocol PRISMA",
     "votium:vote": "yarn ts-node scripts/votium/hermez_vote.ts",
     "votium:snapshot_vote": "yarn ts-node scripts/votium/snapshot_vote.ts",
     "votium:proof": "yarn ts-node scripts/votium/get_proof.ts --round",
