--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "@openzeppelin/contracts": "3.4.1-solc-0.7-2",
     "@openzeppelin/contracts-upgradeable": "3.4.1-solc-0.7-2",
     "@openzeppelin/contracts-upgradeable-v4": "npm:@openzeppelin/contracts-upgradeable@4.9.3",
-    "@openzeppelin/contracts-v4": "npm:@openzeppelin/contracts@4.9.3"
+    "@openzeppelin/contracts-v4": "npm:@openzeppelin/contracts@4.9.3",
+    "@uniswap/v3-periphery": "^1.4.4"
   },
   "lint-staged": {
     "*.{js,ts}": "npx eslint --cache --fix",
