feat: new harvest script for votium and paladin

--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "vlcvx:crv": "yarn ts-node scripts/votium/vote.ts snapshot --protocol CRV",
     "vlcvx:fxn": "yarn ts-node scripts/votium/vote.ts snapshot --protocol FXN",
     "vlcvx:prisma": "yarn ts-node scripts/votium/vote.ts snapshot --protocol PRISMA",
+    "paladin:harvest:crv": "env HARDHAT_NETWORK=mainnet yarn ts-node scripts/paladin/harvest-paladin.ts --market crv --periods",
+    "paladin:harvest:fxn": "env HARDHAT_NETWORK=mainnet yarn ts-node scripts/paladin/harvest-paladin.ts --market fxn --periods",
     "votium:vote": "yarn ts-node scripts/votium/hermez_vote.ts",
     "votium:snapshot_vote": "yarn ts-node scripts/votium/snapshot_vote.ts",
     "votium:proof": "yarn ts-node scripts/votium/get_proof.ts --round",
-    "votium:harvest": "env HARDHAT_NETWORK=mainnet yarn ts-node scripts/votium/harvest.ts --round",
+    "votium:harvest": "env HARDHAT_NETWORK=mainnet yarn ts-node scripts/votium/harvest-votium.ts --round",
     "sdcrv:harvest": "env HARDHAT_NETWORK=mainnet yarn ts-node scripts/stakedao/harvest.ts --round",
     "cvxcrv:weight": "env HARDHAT_NETWORK=mainnet yarn ts-node scripts/cvxcrv_optimal_apr.ts --holder",
     "solhint": "./node_modules/.bin/solhint -f table 'contracts/**/*.sol'",
